--- a/ProyectDatos1_1/pom.xml
+++ b/ProyectDatos1_1/pom.xml
@@ -14,7 +14,16 @@
         <junit.version>5.9.1</junit.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -63,6 +72,7 @@
             <artifactId>javafx-graphics</artifactId>
             <version>19</version>
         </dependency>
+
     </dependencies>
 
     <build>
